# portfolio

./: .gitignore  README.md  portfolio_deploy.sh
.github/workflows/: deploy.yml
backend/: .env.example  main.py  portfolio-backend.service  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  Portfolio.jsx
