[project]
name = "portfolio-chatbot"
version = "0.1.0"
description = "AI Chatbot backend for portfolio website using FastAPI and Ollama"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
